crates/parser/tests/cases/snapshots/cases__errors__array_old_syntax_invalid.snap
---
source: crates/parser/tests/cases/errors.rs
expression: "err_string(stringify!(array_old_syntax_invalid), functions::parse_stmt,\n    \"let x: u8[10\")"

---
error: Unexpected token while parsing type description
  ┌─ array_old_syntax_invalid:1:10
  │
1 │ let x: u8[10
  │          ^ Unexpected token
  │
  = Hint: To define an array type use `Array<u8, 10>`


